bitwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k8s
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bitwarden.helo-k8s.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bitwarden
            port:
              number: 80
